samples/_failures_safe/1761466717_920d3d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c032619.c: In function ‘main’:
./samples/SAFE/__tmp_7c032619.c:132:9: error: expected declaration or statement at end of input
  132 |         }
      |         ^
./samples/SAFE/__tmp_7c032619.c:132:9: error: expected declaration or statement at end of input
